--- a/src/plugins/css/preflight.css
+++ b/src/plugins/css/preflight.css
@@ -1,5 +1,6 @@
 /**
  * Manually forked from SUIT CSS Base: https://github.com/suitcss/base
+ * Modern reset obtained from: https://github.com/kripod/css-homogenizer
  * A thin layer on top of normalize.css that provides a starting point more
  * suitable for web applications.
  */
@@ -8,20 +9,40 @@
  * Removes the default spacing and border for appropriate elements.
  */
 
-blockquote,
-dl,
-dd,
+p,
 h1,
 h2,
 h3,
 h4,
 h5,
 h6,
-hr,
+blockquote,
+dl,
+dd,
 figure,
-p,
-pre {
-  margin: 0;
+pre,
+hr,
+fieldset,
+ol,
+ul,
+menu {
+	margin: 0;
+}
+
+th,
+td,
+legend,
+fieldset,
+ol,
+ul,
+menu {
+	padding: 0;
+}
+
+hr,
+fieldset,
+iframe {
+	border: 0;
 }
 
 button {
@@ -39,16 +60,10 @@ button:focus {
   outline: 5px auto -webkit-focus-ring-color;
 }
 
-fieldset {
-  margin: 0;
-  padding: 0;
-}
-
 ol,
-ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+ul,
+menu {
+	list-style: none; /* list-style-type */
 }
 
 /**
@@ -60,11 +75,13 @@ ul {
  *    sans-serif font stack as a fallback) as a sane default.
  * 2. Use Tailwind's default "normal" line-height so the user isn't forced
  *    to override it to ensure consistency even when using the default theme.
+ * 3. Prevent overflow caused by long words when absolutely necessary.
  */
 
 html {
   font-family: theme('fontFamily.sans', system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"); /* 1 */
   line-height: 1.5; /* 2 */
+  overflow-wrap: break-word; /* 3 */
 }
 
 /**
@@ -139,7 +156,12 @@ button,
 }
 
 table {
+  border-spacing: 0;
   border-collapse: collapse;
+}
+
+th {
+	text-align: inherit;
 }
 
 h1,
@@ -147,9 +169,10 @@ h2,
 h3,
 h4,
 h5,
-h6 {
-  font-size: inherit;
-  font-weight: inherit;
+h6,
+th,
+address {
+	font: inherit; /* font-size, font-weight, font-style */
 }
 
 /**
@@ -175,7 +198,6 @@ input,
 optgroup,
 select,
 textarea {
-  padding: 0;
   line-height: inherit;
   color: inherit;
 }
@@ -225,4 +247,13 @@ img,
 video {
   max-width: 100%;
   height: auto;
+}
+
+/**
+ * Cater for the 'hidden' attribute:
+ * https://css-tricks.com/the-hidden-attribute-is-visibly-weak/
+ */
+
+[hidden] {
+	display: none !important;
 }
