--- a/__tests__/fixtures/tailwind-output-no-color-opacity.css
+++ b/__tests__/fixtures/tailwind-output-no-color-opacity.css
@@ -13447,14 +13447,17 @@ video {
 .break-normal {
   overflow-wrap: normal;
   word-break: normal;
+  white-space: normal;
 }
 
 .break-words {
   overflow-wrap: break-word;
+  white-space: normal;
 }
 
 .break-all {
   word-break: break-all;
+  white-space: normal;
 }
 
 .truncate {
@@ -29230,14 +29233,17 @@ video {
   .sm\:break-normal {
     overflow-wrap: normal;
     word-break: normal;
+    white-space: normal;
   }
 
   .sm\:break-words {
     overflow-wrap: break-word;
+    white-space: normal;
   }
 
   .sm\:break-all {
     word-break: break-all;
+    white-space: normal;
   }
 
   .sm\:truncate {
@@ -44983,14 +44989,17 @@ video {
   .md\:break-normal {
     overflow-wrap: normal;
     word-break: normal;
+    white-space: normal;
   }
 
   .md\:break-words {
     overflow-wrap: break-word;
+    white-space: normal;
   }
 
   .md\:break-all {
     word-break: break-all;
+    white-space: normal;
   }
 
   .md\:truncate {
@@ -60736,14 +60745,17 @@ video {
   .lg\:break-normal {
     overflow-wrap: normal;
     word-break: normal;
+    white-space: normal;
   }
 
   .lg\:break-words {
     overflow-wrap: break-word;
+    white-space: normal;
   }
 
   .lg\:break-all {
     word-break: break-all;
+    white-space: normal;
   }
 
   .lg\:truncate {
@@ -76489,14 +76501,17 @@ video {
   .xl\:break-normal {
     overflow-wrap: normal;
     word-break: normal;
+    white-space: normal;
   }
 
   .xl\:break-words {
     overflow-wrap: break-word;
+    white-space: normal;
   }
 
   .xl\:break-all {
     word-break: break-all;
+    white-space: normal;
   }
 
   .xl\:truncate {
