--- a/__tests__/fixtures/tailwind-output.css
+++ b/__tests__/fixtures/tailwind-output.css
@@ -15895,14 +15895,17 @@ video {
 .break-normal {
   overflow-wrap: normal;
   word-break: normal;
+  white-space: normal;
 }
 
 .break-words {
   overflow-wrap: break-word;
+  white-space: normal;
 }
 
 .break-all {
   word-break: break-all;
+  white-space: normal;
 }
 
 .truncate {
@@ -34126,14 +34129,17 @@ video {
   .sm\:break-normal {
     overflow-wrap: normal;
     word-break: normal;
+    white-space: normal;
   }
 
   .sm\:break-words {
     overflow-wrap: break-word;
+    white-space: normal;
   }
 
   .sm\:break-all {
     word-break: break-all;
+    white-space: normal;
   }
 
   .sm\:truncate {
@@ -52327,14 +52333,17 @@ video {
   .md\:break-normal {
     overflow-wrap: normal;
     word-break: normal;
+    white-space: normal;
   }
 
   .md\:break-words {
     overflow-wrap: break-word;
+    white-space: normal;
   }
 
   .md\:break-all {
     word-break: break-all;
+    white-space: normal;
   }
 
   .md\:truncate {
@@ -70528,14 +70537,17 @@ video {
   .lg\:break-normal {
     overflow-wrap: normal;
     word-break: normal;
+    white-space: normal;
   }
 
   .lg\:break-words {
     overflow-wrap: break-word;
+    white-space: normal;
   }
 
   .lg\:break-all {
     word-break: break-all;
+    white-space: normal;
   }
 
   .lg\:truncate {
@@ -88729,14 +88741,17 @@ video {
   .xl\:break-normal {
     overflow-wrap: normal;
     word-break: normal;
+    white-space: normal;
   }
 
   .xl\:break-words {
     overflow-wrap: break-word;
+    white-space: normal;
   }
 
   .xl\:break-all {
     word-break: break-all;
+    white-space: normal;
   }
 
   .xl\:truncate {
